// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CheckboxGroup />  renders Checkbox Group with noBottomMargin attribute 1`] = `
<div
  class="checkboxGroupContainer noBottomMargin"
  data-automation-id="CheckboxGroupAutomationId-field-checkbox-group"
>
  <div
    class="checkboxGroupLabel"
  >
    <label
      class="label text"
      data-automation-id="CheckboxGroupAutomationId-field-label"
    >
      <span
        class="appendedLabel"
      >
        CheckboxGroup Label
      </span>
    </label>
  </div>
</div>
`;

exports[`<CheckboxGroup />  renders Checkbox Group without noBottomMargin attribute 1`] = `
<div
  class="checkboxGroupContainer"
  data-automation-id="CheckboxGroupAutomationId-field-checkbox-group"
>
  <div
    class="checkboxGroupLabel"
  >
    <label
      class="label text"
      data-automation-id="CheckboxGroupAutomationId-field-label"
    >
      <span
        class="appendedLabel"
      >
        CheckboxGroup Label
      </span>
    </label>
  </div>
</div>
`;
